--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		</script>
+		
 
 </head>
 
@@ -691,7 +691,7 @@
 							<div class="product-btns">
 								<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
 								<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
-								<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> <a href="product-page.html">Add to Cart</a></button>
+								<a href="product-page.html"><button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button></a>
 							</div>
 						</div>
 					</div>
@@ -1032,7 +1032,7 @@
 							<div class="product-btns">
 								<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
 								<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
-								<i class="fa fa-shopping-cart"></i> <a class="primary-btn add-to-cart" href="product-page.html" target="_new">Add to Cart</a>
+								<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</a></button>
 							</div>
 						</div>
 					</div>
