--- a/login-error.html
+++ b/login-error.html
@@ -44,13 +44,13 @@
 
 <body>
     <!-- section CONTENT GOES HERE-->
-    <div id="stripe" style="position: fixed;width:100vw;height: 100vh;top:0;background:url('img/banner02.jpg');background-size:100% auto"></div>
+    <div id="stripe" style="position: fixed;width:100vw;height: 100vh;top:0;background:url('img/banner02.jpg');background-size:auto 100%;background-position: center;"></div>
     <!-- <div id="stripe" style="position: fixed;width:55vw;height: 100vh;top:0;background-color:  #E9B121;"></div> -->
 
 
     <div id="panel" class="container col-md-4" >
         <header>
-            <img src="img/logo_TAW.png" alt="LogoTAW">
+                <img id="login-logo-header" src="img/logo_TAW.png" alt="LogoTAW">
         </header>
 
 
