Se cargo sucursales

--- a/sucursales.html
+++ b/sucursales.html
@@ -363,10 +363,92 @@
 	<div class="section">
 		<!-- container -->
 		<div class="container">
-			Aquí Mapa
-
+			<div class="section-title" style="text-align: left;">
+				<h5 class="title">Formas de Entrega de Productos</h5>
 			</div>
-			<!-- /row -->
+			<p>Consulte las diferentes formas de entrega que tenemos para usted, de acuerdo a su localidad y al tipo de producto. A continuación podrá encontrar las opciones que le ofrecemos:</p>
+			<ul class="nav nav-tabs" id="myTab" role="tablist">
+				<li class="nav-item active">
+					<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Entrega de Tienda</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Entrega a Domicilio</a>
+				</li>
+			</ul>
+			<div class="tab-content container" id="myTabContent">
+				<div class="tab-pane fade active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+					<br>
+					<div class="container">	
+						<div class="row"><p>Para mayor comodidad de nuestros clientes contamos con un pequeño stock de unidades de enseres menores en los diferentes puntos de venta (microondas, calentadores, cafeteras, hornitos, licuadoras, etc).</p></div> 
+						<div class="row">Consultar disponibilidad con su ejecutivo de ventas:</div>
+						<div class="section-title">
+								<h6 class="title"> Contacto Directo a Sucursales:</h6>
+							</div>
+						<div class="col-md-6">
+							
+		
+							<b>Monterrey - Padre Mier</b>
+							<p>Padre Mier #954 <br>
+								Monterrey, NL <br>
+								Teléfono: (0181) 88 65 82 01
+							</p>
+		
+							<b>Monterrey - Apodaca</b>
+							<p>Carr. Miguel Alemán Km. 16.13 El Milagro<br>
+								Apodaca, Nuevo León<br>
+								Teléfono: (0181) 83 22 19 46
+							</p>
+		
+							<b>Celaya</b>
+							<p>Carretera Panamericana Km. 280 <br>
+								Celaya, Guanajuato<br>
+								Teléfono: (01461) 61 53 830
+							</p>
+		
+							<b>Ramos Arizpe</b>
+							<p>Omega, 25903<br>
+								Ramos Arizpe, Coahuila<br>
+								Teléfono: (01844) 86 64 203
+							</p>
+							
+						</div>
+						<div class="col-md-6">
+								<img src="img/mapa.png" style="position: relative;width:100%" alt="MAPA">
+						</div>
+					</div>
+				</div>
+				<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+					<br>
+					<div class="container">
+						<div class="row">
+							<p>Después de haber realizado su compra la entrega de su producto dependerá de la disponibilidad de inventario, el tiempo aproximado es de 30 días hábiles, si no hay inventario disponible será aproximadamente de 60 días hábiles.</p>
+						</div>
+						<div class="row">
+							<div class="section-title" style="text-align: left;">
+								<h5 class="title">¡Consulta destinos y tarifas!</h5>
+							</div>
+						</div>
+						<div class="row">
+							<table class="table">
+								<tr>
+									<th>Tipo de Producto</th>
+									<th>Destinos y tarifario</th>
+								</tr>
+								<tr>
+									<td>Lavadoras, secadoras, refrigeradores, estufas, campanas, lavavajillas, minisplits, parrillas, hornos, y/o campanas	</td>
+									<td>Consulta cobertura de tu domicilio y tarifa. <a href="#">Haz clic ¡Aquí!</a></td>
+								</tr>
+								<tr>
+									<td>Microondas, cafeteras, teteras, gadgets, filtros, desapachador de agua, aspiradoras , tostadores, procesadores, accesorios y portables.	</td>
+									<td>Consulta cobertura de tu domicilio y tarifa. <a href="#">Haz clic ¡Aquí!</a></td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /row -->
 		</div>
 		<!-- /container -->
 	</div>
