Table responsive formas_pago

--- a/formas_pago.html
+++ b/formas_pago.html
@@ -508,104 +508,106 @@
 		<div class="row">
 			<div class="col-md-12" style="box-sizing:border-box;margin:15px;">
 				<b><h3>Para brindarte mayor conveniencia te ofrecemos múltiples formas de pago:</h3></b>
-				<table id="table-formas-pago" class="table table-striped">
-					<thead>
-						<tr>
-							<th style="line-height: 50px;" scope="col">Formas de pago</th>
-							<th scope="col"><img src="img/126122.svg" width="50px"><br> Comprando en las Tiendas Whirlpool</th>
-							<th scope="col"><img src="img/126127.svg" width="50px"><br> Comprando por TiendaWhirlpool.com</th>
-							<th scope="col"><img src="img/126100.svg" width="50px"><br> Comprando por Telefono</th>
-							<th style="line-height: 50px;" scope="col">Comentarios</th>
-						</tr>
-					</thead>
-					<tbody style="text-align: center;">
-						<tr>
-							<th scope="row">Contado</th>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><p>Aplica en todas las tiendas excepto Guadalajara</p></td>
-						</tr>
-						<tr>
-							<th scope="row">Cheque</th>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><p>Extenderlo por la cantidad correspon- dientes a nombre de Whirlpool México, S.A. de C.V.</p></td>
-						</tr>
-						<tr>
-							<th scope="row">Order de Compra</th>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><p>Solicítala en la Dirección de Recursos Humanos de tu Empresa. Puede mezclarse con otras formas de pago</p></td>
-						</tr>
-						<tr>
-							<th scope="row">Tarjeta de credito</th>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><p>Bievenidas todas las tarjetas VISA y Master Card</p></td>
-						</tr>
-						<tr>
-							<th scope="row">Tarjeta de debito</th>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><p>Bievenidas todas las tarjetas VISA y Master Card</p></td>
-						</tr>
-						<tr>
-							<th scope="row">Depósito Bancario</th>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td><img src="img/447047.svg" width="20px"></td>
-							<td><img src="img/447147.svg" width="20px"></td>
-							<td style="text-align: left;"><p>	
-									Haz tu depósito a nombre de Whirlpool México S.A. de C.V. en las cuentas
-									<br>
-									BANAMEX <br>
-									CUENTA:<br>
-									392-7591900<br>
-									CLABE:<br>
-									002580 0392 7591 9004<br>
-									REFERENCIA:<br>
-									100 400064<br>
-									<br>
-									BANORTE CUENTA:<br>
-									0178690676<br>
-									CLABE:<br>
-									07258 00017 8690 6768<br>
-									REFERENCIA:<br>
-									100 400064<br>
-									<br>
-									Una vez realizado envíalo a tu asesor de ventas</p></td>
-						</tr>
-						<tr>
-							<th scope="row">Transferencia Bancaria</th>
-							<td><img src="img/447147.svg" width="30px"></td>
-							<td><img src="img/447047.svg" width="30px"></td>
-							<td><img src="img/447147.svg" width="30px"></td>
-							<td style="text-align: left;"><p>	
-									Haz tu depósito a nombre de Whirlpool México S.A. de C.V. en las cuentas
-									<br>
-									BANAMEX <br>
-									CUENTA:<br>
-									392-7591900<br>
-									CLABE:<br>
-									002580 0392 7591 9004<br>
-									REFERENCIA:<br>
-									100 400064<br>
-									<br>
-									BANORTE CUENTA:<br>
-									0178690676<br>
-									CLABE:<br>
-									07258 00017 8690 6768<br>
-									REFERENCIA:<br>
-									100 400064<br>
-									<br>
-									Una vez realizado envíalo a tu asesor de ventas</p></td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="table-responsive">
+					<table id="table-formas-pago" class="table table-striped">
+						<thead>
+							<tr>
+								<th style="line-height: 50px;" scope="col">Formas de pago</th>
+								<th scope="col"><img src="img/126122.svg" width="50px"><br> Comprando en las Tiendas Whirlpool</th>
+								<th scope="col"><img src="img/126127.svg" width="50px"><br> Comprando por TiendaWhirlpool.com</th>
+								<th scope="col"><img src="img/126100.svg" width="50px"><br> Comprando por Telefono</th>
+								<th style="line-height: 50px;" scope="col">Comentarios</th>
+							</tr>
+						</thead>
+						<tbody style="text-align: center;">
+							<tr>
+								<th scope="row">Contado</th>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><p>Aplica en todas las tiendas excepto Guadalajara</p></td>
+							</tr>
+							<tr>
+								<th scope="row">Cheque</th>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><p>Extenderlo por la cantidad correspon- dientes a nombre de Whirlpool México, S.A. de C.V.</p></td>
+							</tr>
+							<tr>
+								<th scope="row">Order de Compra</th>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><p>Solicítala en la Dirección de Recursos Humanos de tu Empresa. Puede mezclarse con otras formas de pago</p></td>
+							</tr>
+							<tr>
+								<th scope="row">Tarjeta de credito</th>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><p>Bievenidas todas las tarjetas VISA y Master Card</p></td>
+							</tr>
+							<tr>
+								<th scope="row">Tarjeta de debito</th>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><p>Bievenidas todas las tarjetas VISA y Master Card</p></td>
+							</tr>
+							<tr>
+								<th scope="row">Depósito Bancario</th>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td><img src="img/447047.svg" width="20px"></td>
+								<td><img src="img/447147.svg" width="20px"></td>
+								<td style="text-align: left;"><p>	
+										Haz tu depósito a nombre de Whirlpool México S.A. de C.V. en las cuentas
+										<br>
+										BANAMEX <br>
+										CUENTA:<br>
+										392-7591900<br>
+										CLABE:<br>
+										002580 0392 7591 9004<br>
+										REFERENCIA:<br>
+										100 400064<br>
+										<br>
+										BANORTE CUENTA:<br>
+										0178690676<br>
+										CLABE:<br>
+										07258 00017 8690 6768<br>
+										REFERENCIA:<br>
+										100 400064<br>
+										<br>
+										Una vez realizado envíalo a tu asesor de ventas</p></td>
+							</tr>
+							<tr>
+								<th scope="row">Transferencia Bancaria</th>
+								<td><img src="img/447147.svg" width="30px"></td>
+								<td><img src="img/447047.svg" width="30px"></td>
+								<td><img src="img/447147.svg" width="30px"></td>
+								<td style="text-align: left;"><p>	
+										Haz tu depósito a nombre de Whirlpool México S.A. de C.V. en las cuentas
+										<br>
+										BANAMEX <br>
+										CUENTA:<br>
+										392-7591900<br>
+										CLABE:<br>
+										002580 0392 7591 9004<br>
+										REFERENCIA:<br>
+										100 400064<br>
+										<br>
+										BANORTE CUENTA:<br>
+										0178690676<br>
+										CLABE:<br>
+										07258 00017 8690 6768<br>
+										REFERENCIA:<br>
+										100 400064<br>
+										<br>
+										Una vez realizado envíalo a tu asesor de ventas</p></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</div>
